--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,5 +2,6 @@
 <RCC version="1.0">
     <qresource>
         <file alias="icon.svg">images/icon.svg</file>
+        <file alias="refresh.png">images/refresh.png</file>
     </qresource>
 </RCC>
